# hands-on

./: .gitignore  README.md  ascent-setup-env.sh  aurora-setup-env.sh  polaris-setup-env.sh  setup-env.sh  theta-setup-env.sh
ai-checkpoint/: README.md  async-distributed-checkpoint-vision-vit-perlmutter.sh  async-distributed-checkpoint-vision-vit.py  checkpoint-vision-vit-perlmutter.sh  checkpoint-vision-vit.py  distributed-checkpoint-vision-vit-perlmutter.sh  distributed-checkpoint-vision-vit.py
array/: 1-description.c  2-posix.c  6-array-mpiio-write-read.c  7-array-pnetcdf-write.c  8-array-pnetcdf-write-read.c  9-array-pnetcdf-op-combine.c  Makefile  array-mpiio-write-read.c  array-mpiio-write.c  array-pnetcdf-write-read.c  array-pnetcdf.c  array.c  array.h  description.c  master.c  mpi-util.h  posix.c  submit-aurora.sh  submit-theta.sh  submit.sh
array/solutions/: 1-description.c  2-posix.c  5-array-mpiio-write.py  6-array-mpiio-write-read.py  8-array-pnetcdf-write-read.c  Makefile  array-mpiio-write.c  array-pnetcdf-op-combine-compare.c  array-pnetcdf-op-combine.c  array.h  master.c  master.py  mpi-util.h  pnetcdf-util.h  posix.c  posix.py  robl_3-master_id256590_7-31-63547-8825523567792752979_1.darshan  robl_3-master_id358771_7-31-70112-1035058853799806916_1.darshan  submit-ascent.sh  submit-aurora.sh  submit-polaris.sh  submit-theta.sh  util.c
benchmarking/: README.atpesc  alignment-demo.sbatch  cache-demo.sbatch  hdf5.ior
benchmarking/alignment-demo.out.stripe1/: aligned_1M.out  slurm-1502184.out  unaligned_1M.out
benchmarking/alignment-demo.out.stripe4/: aligned_1M.out  slurm-1502206.out  unaligned_1M.out
benchmarking/cache-demo.out.0/: cache_demo.0.darshan  cache_demo.2.darshan  cache_demo.5.darshan  cache_demo.out.0  cache_demo.out.3  cache_demo.out.5  slurm-23448871.out
benchmarking/cache-demo.out.1/: cache_demo.3.darshan  cache_demo.4.darshan  cache_demo.5.darshan  cache_demo.out.1  cache_demo.out.5
benchmarking/ior-3.2.1+atpesc/: Makefile.in  aclocal.m4  configure
benchmarking/output.0/: cache_demo.1.darshan  cache_demo.3.darshan  cache_demo.4.darshan  cache_demo.out.1  cache_demo.out.2  cache_demo.out.4
benchmarking/output.1/: cache_demo.0.darshan  cache_demo.1.darshan  cache_demo.2.darshan  cache_demo.out.0  cache_demo.out.2  cache_demo.out.3  cache_demo.out.4  slurm-23449690.out
daos/: job-dfs.sh  job-mpiio.sh  job-posix-il.sh  job-posix.sh
daos/src/: Makefile  README  array.h  daos-hello-world  daos-hello-world.c  dfs-read  dfs-read.c  dfs-write  dfs-write.c  mpiio-read  mpiio-read.c  mpiio-write  mpiio-write.c  posix-read  posix-read.c  posix-write  posix-write.c  util.c  util.h
darshan/: README.txt
darshan/fidgetspinner/: fidgetspinnerA-aurora.qsub  fidgetspinnerA.c  fidgetspinnerA.qsub  fidgetspinnerB-aurora.qsub  fidgetspinnerB.c  fidgetspinnerB.qsub
darshan/helloworld/: helloworld-aurora.qsub  helloworld.c  helloworld.lsf  helloworld.qsub
darshan/warpdrive/: warpdriveA-aurora.qsub  warpdriveA.c  warpdriveA.qsub  warpdriveB-aurora.qsub  warpdriveB.c  warpdriveB.qsub
globus/: globus-decoder.sh
h5bench/: README.md  atpsec.json  h5bench-perlmutter.sh
hdf5/: Makefile  h5par-comparison.c  h5par_ex1a.c  h5par_ex1b.c  h5par_ex1c.c  h5par_ex2a.c  h5par_ex2b.c
hello-io/: Makefile  hello-aurora.sh  hello-hdf5.c  hello-hdf5.sh  hello-mpiio-noncontig.c  hello-mpiio-view.c  hello-mpiio.c  hello-pnetcdf.c  hello-pnetcdf.sh  submit-polaris.sh
ior/: README.md  ior-noncontig-collective-theta.sh  ior-noncontig-theta.sh  ior-simple-ascent.sh  ior-simple-theta.sh
ior/aurora/: ior-pnetcdf.sh  ior-simple.sh
ior/noncontig/: noncontig.conf  (+3 more)
mpi2tutorial/: .cvsignore  Makefile  README  configure.ac
mpi2tutorial/examples/: Makefile
mpi2tutorial/examples/life/: .cvsignore  Makefile.in  mlife-fence.c  mlife-io-mpiio.c  mlife-io-pnetcdf.c  mlife-io-stdout.c  mlife-io.h  mlife-pscw.c  mlife-pt2pt.c  mlife.c  mlife.h  mlife2d-fence.c  mlife2d-io-stdout.c  mlife2d-io-stdout1.c  mlife2d-pt2pt.c  mlife2d.c  mlife2d.h  mlife2df-fence.f  mlife2df-io-stdout.f  mlife2df-pt2pt.f  mlife2df.f  mlife2df.h  mlifeomp.c  sweepomp1.c  sweepomp2.c  sweepomp3.c
mpi2tutorial/examples/mutex/: .cvsignore  Makefile.in  mpimutex.c  mpimutex.h
mpi2tutorial/examples/pneo/: .cvsignore  Makefile.in  pneo_fence.c  pneo_pscw.c  pneofile
mpi2tutorial/examples/sparsemat/: .gitignore  Makefile.in  README.txt  csrio-mpiio.c  csrio-stdout.c  csrio.h  test1.c
mpi2tutorial/examples/spawn/: .cvsignore  Makefile.in  pcp-spawn-master.c  pcp-spawn-slave.c
mpi2tutorial/maint/: Makefile  ctopdf  ctops  ctortf
util/: hex-decoder-string-generator.sh
variance/: variance-aurora.qsub  variance.c  variance.qsub
(+11 files in other folders)
